# Avaliar

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  Dockerfile.prod  README.md  README_PRODUCAO.md  database_setup.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: publish.yml
api/: alembic.ini  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0363b596667a_make_email_optional_in_alunos.py  0a60f4c0a6fd_adicionar_tabela_data_prova_entre_turma_.py  4bc74ec62569_add_questao_and_questao_opcao_tables.py  4ede1697b4d3_initial_schema.py  8aa2c615cdc9_add_deleted_column_to_provas.py  8ab3bf85f2d1_add_turma_and_aluno_tables_with_many_to_.py  96b9cfe59411_merge_heads.py  a29881004b00_add_default_user_admin.py  adba7c6988ee_add_created_by_column_to_provas.py  add_randomizacao_tables.py  d6e770c49a8b_add_unique_constraints_to_randomizacao_.py  de9c7bc08242_add_acessos_table.py  f1234567890e_add_default_user_admin.py
api/app/: __init__.py
api/app/api/v1/: alunos.py  auth.py  cartao_resposta.py  exam_corrector.py  image_correction.py  latex.py  provas.py  questoes.py  randomizacao.py  routes.py  system.py  turmas.py
api/app/core/: __init__.py  config.py  database.py  dependencies.py  events.py  middleware.py
api/app/db/: __init__.py
api/app/db/models/: __init__.py  acesso.py  aluno.py  correcao.py  data_prova.py  prova.py  questao.py  randomizacao.py  turma.py  user.py
api/app/models/: exam.py  latex.py
api/app/services/: __init__.py  acesso_service.py  aluno_manager.py  cartao_resposta_service.py  exam_corrector.py  gabarito_service.py  latex_compiler.py  latex_parser.py  migration_service.py  prova_manager.py  questao_manager.py  randomizacao_manager.py  turma_manager.py
api/correction/: script.sh  setup.sh  template.json
api/scripts/: test_qrcode_scan.py
api/static/templates/: cartao_resposta.html  gabarito.html
app/: __init__.py
app/api/: __init__.py  frontend.py
app/api/v1/: __init__.py  auth.py  provas.py  routes.py
app/core/: auth.py  config.py  dependencies.py  events.py  middleware.py
app/models/: __init__.py  prova.py
app/services/: cleanup_service.py  latex_compiler.py  prova_manager.py
app/utils/: __init__.py  logger.py
back/: Dockerfile  main.py  requirements.txt
back/app/routers/: auth.py  questoes.py
back/app/utils/: questoes.py
back/db/: questoes.db
front/: .env.example  Dockerfile  Home.py  package-lock.json  package.json
front/app/: app.css  routes.ts
front/app/components/: index.ts
front/app/components/AddQuestionButtons/: AddQuestionButtons.tsx
front/app/config/: api.ts
front/app/contexts/: AuthContext.tsx
front/app/hooks/: index.ts  useLatexCompiler.ts  useProvaEditor.ts  useProvaSave.ts
front/app/pages/: index.ts
front/app/prova/: prova.tsx
front/app/routes/: alunos-provas.tsx  alunos.tsx  home.tsx  login.tsx  prova.tsx  turmas.tsx
front/app/services/: api.ts  tex.ts
front/app/start/: start.tsx
front/app/types/: index.ts  question.ts
front/app/utils/: date-formatter.ts  index.ts  latex-parser.ts  syntax-highlighter.ts
front/app/welcome/: welcome.tsx
front/pages/: 1_Gerenciar_Questoes.py  2_Gerenciar_Provas.py  3_Gerenciar_Gabaritos.py
(+17 files in other folders)
