[project]
name = "avaliar"
version = "0.0.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.46.1,<2.0.0)",
    "fastapi[standard] (>=0.115.14,<0.116.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
api = "python back/main.py"
ui = "python -m streamlit run front/Home.py" 
test = "pytest"

[tool.poe.tasks.start]
"shell" = "trap 'kill 0' INT; poe api & poe ui & wait"
